--- a/debian/rules
+++ b/debian/rules
@@ -9,8 +9,9 @@ gles2_architectures := armel armhf
 
 DEB_VERSION := $(shell dpkg-parsechangelog | egrep '^Version:' | cut -f 2 -d ' ')
 
-export CFLAGS=$(shell echo $$CFLAGS | sed -e 's/\-Wall//') -Wno-error=deprecated-declarations
-export CXXFLAGS=$(shell echo $$CXXFLAGS | sed -e 's/\-Wall//') -Wno-error=deprecated-declarations
+# avoid template instance removal (lp:1286284)
+export DEB_CXXFLAGS_MAINT_STRIP=-O3
+export DEB_CXXFLAGS_MAINT_APPEND=-O2
 
 # http://ccache.samba.org/manual.html#_precompiled_headers
 CCACHE_SLOPPINESS=time_macros
