UnityShell Settings: use "Unity" name instead of "custom lockscreen"

--- a/plugins/unityshell/unityshell.xml.in
+++ b/plugins/unityshell/unityshell.xml.in
@@ -163,7 +163,7 @@
                     </desc>
                     <desc>
                         <value>2</value>
-                        <_name>Custom lockscreen</_name>
+                        <_name>Unity</_name>
                     </desc>
                 </option>
             </group>
