--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -24,6 +24,7 @@ launcher/SoftwareCenterLauncherIcon.cpp
 launcher/SpacerLauncherIcon.cpp
 launcher/TrashLauncherIcon.cpp
 launcher/VolumeLauncherIcon.cpp
+lockscreen/UserPromptView.cpp
 panel/PanelMenuView.cpp
 plugins/networkarearegion/networkarearegion.xml.in
 plugins/unity-mt-grab-handles/unitymtgrabhandles.xml.in
