--- a/debian/control
+++ b/debian/control
@@ -9,17 +9,14 @@ Build-Depends: cmake,
                dh-migrations,
                dh-translations (>= 94),
                google-mock (>= 1.6.0+svn437),
-               google-mock,
                gsettings-desktop-schemas-dev,
                gsettings-ubuntu-schemas (>= 0.0.1+14.04.20140219),
                intltool (>= 0.35.0),
                libatk1.0-dev,
                libbamf3-dev (>= 0.5.0+13.10.20130731),
                libboost-dev,
-               libboost-serialization-dev,
                libcairo2-dev,
                libdbus-1-dev,
-               libcompizconfig0-dev (>= 1:0.9.11),
                libdbusmenu-glib-dev (>= 0.3.91),
                libdee-dev (>= 1.2.6),
                libgee-dev (>= 0.5.0),
@@ -27,7 +24,6 @@ Build-Depends: cmake,
                libgl1-mesa-dri,
                libglib2.0-dev (>= 2.39.1),
                libgnome-desktop-3-dev,
-               libgrail-dev (>= 1.0.20),
                libgtest-dev,
                libgtk-3-dev (>= 3.1),
                libido3-0.1-dev (>= 13.10.0),
@@ -46,7 +42,6 @@ Build-Depends: cmake,
                libunique-dev,
                libunity-dev (>= 7.1.0),
                libunity-misc-dev (>= 4.0.4),
-               libunity-scopes-json-def-desktop,
                libupstart-dev,
                libxcb-icccm4-dev,
                libxfixes-dev (>= 1:5.0.1-1),
@@ -79,6 +74,7 @@ Depends: ${shlibs:Depends},
          nux-tools,
          dconf-cli,
          unity-asset-pool (>= 0.8.18),
+         unity-greeter,
          bamfdaemon,
          libxfixes3 (>= 1:5.0.1-1),
          libxi6 (>= 2:1.7.1.901),
