Lockscreen: re-add panel to the built list

--- a/lockscreen/CMakeLists.txt
+++ b/lockscreen/CMakeLists.txt
@@ -23,6 +23,7 @@ set (LOCKSCREEN_SOURCES
      LockScreenSettings.cpp
      LockScreenShield.cpp
      LockScreenShieldFactory.cpp
+     LockScreenPanel.cpp
      UserAuthenticatorPam.cpp
      UserPromptView.cpp
      )
