--- a/plugins/unityshell/unityshell.xml.in
+++ b/plugins/unityshell/unityshell.xml.in
@@ -362,6 +362,12 @@
                     <default>true</default>
                 </option>
 
+                <option name="launcher_minimize_window" type="bool">
+                    <_short>Minimize Single Window Applications</_short>
+                    <_long>Allows minimizing a single windowed application by clicking on its Launcher icon.</_long>
+                    <default>false</default>
+                </option>
+
                 <option name="edge_responsiveness" type="float">
                     <_short>Launcher Reveal Edge Responsiveness</_short>
                     <_long>A conglomerate setting that modifies the overall responsiveness of the Launcher reveal.</_long>
