--- a/unity-shared/CMakeLists.txt
+++ b/unity-shared/CMakeLists.txt
@@ -29,6 +29,7 @@ set (UNITY_SHARED_SOURCES
      DesktopApplicationManager.cpp
      EMConverter.cpp
      GnomeFileManager.cpp
+     FontSettings.cpp
      GraphicsUtils.cpp
      IMTextEntry.cpp
      IconLoader.cpp
