DecorationsForceQuitDialog: add first basic gtk implementation of the force-quit dialog

--- a/decorations/CMakeLists.txt
+++ b/decorations/CMakeLists.txt
@@ -33,6 +33,7 @@ set (DECORATION_SOURCES
      DecorationsMenuLayout.cpp
      DecorationsMenuEntry.cpp
      DecorationsMenuDropdown.cpp
+     DecorationsForceQuitDialog.cpp
      DecorationsDataPool.cpp
      )
 
