--- a/unity-shared/CMakeLists.txt
+++ b/unity-shared/CMakeLists.txt
@@ -78,6 +78,7 @@ if(ENABLE_X_SUPPORT)
   set (UNITY_SHARED_SOURCES
     XKeyboardUtil.cpp
     XWindowManager.cpp
+    InputMonitor.cpp
     ${UNITY_SHARED_SOURCES}
     )
 else()
