--- a/debian/control
+++ b/debian/control
@@ -122,9 +122,9 @@ Description: Services for the Unity interface
  This package contains the D-Bus service used for unity.
 
 Package: unity-schemas
-Architecture: any
+Architecture: all
+Multi-Arch: foreign
 Depends: ${misc:Depends},
-         libglib2.0-bin,
 Replaces: libunity-core-6.0-9 (<< 7.3.0),
 Breaks: libunity-core-6.0-9 (<< 7.3.0),
 Description: Interface designed for efficiency of space and interaction.
