PanelService: add entry signature definitions in private header and use them everywhere
So we don't have to rewrite the same unreadable string of types everywhere.

--- a/UnityCore/CMakeLists.txt
+++ b/UnityCore/CMakeLists.txt
@@ -117,6 +117,7 @@ set (CORE_SOURCES
 #
 include_directories(${CORE_DEPS_INCLUDE_DIRS})
 include_directories(${CMAKE_BINARY_DIR})
+include_directories(..)
 
 set (LIBS ${CORE_DEPS_LDFLAGS} ${PRIVATE_CORE_DEPS_LDFLAGS})
 
