--- a/debian/control
+++ b/debian/control
@@ -80,7 +80,7 @@ Depends: ${shlibs:Depends},
 Provides: indicator-renderer
 Recommends: unity-control-center,
             ${unity-default-masterscopes}
-            indicator-appmenu,
+            indicator-appmenu (>= 15.02.0),
             indicator-application,
             indicator-sound,
             indicator-bluetooth,
