--- a/debian/control
+++ b/debian/control
@@ -70,6 +70,7 @@ Depends: ${shlibs:Depends},
          compiz-plugins-default,
          libglib2.0-bin,
          nux-tools,
+         python3-gi,
          dconf-cli,
          unity-asset-pool (>= 0.8.18),
          unity-greeter,
