--- a/debian/rules
+++ b/debian/rules
@@ -58,9 +58,9 @@ override_dh_shlibdeps:
 	dh_shlibdeps -l$(LIBUNITY_PRIVATE) -O--parallel
 
 override_dh_auto_test:
-#ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-#	make -C obj-$(DEB_HOST_GNU_TYPE) check-headless
-#endif
+ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
+	make -C obj-$(DEB_HOST_GNU_TYPE) check-headless
+endif
 
 %:
 	dh $@ --with translations,quilt,python2,migrations --parallel
