debian/rules: Don't build unit tests in arm64

--- a/debian/rules
+++ b/debian/rules
@@ -28,6 +28,11 @@ ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), $(gles2_architectures)))
   cmake_gl_options := -DBUILD_GLES=TRUE -DDISABLE_MAINTAINER_CFLAGS=ON
 endif
 
+# Workaround for bug #1511542
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), arm64))
+  cmake_pch_options := -DENABLE_UNIT_TESTS=OFF
+endif
+
 override_dh_auto_configure:
 	dh_auto_configure -- $(cmake_base_options) $(cmake_gl_options) $(cmake_pch_options)
 
