--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Build-Depends: cmake,
-               compiz-dev (>= 1:0.9.11),
+               compiz-dev (>= 1:0.9.12.2),
                debhelper (>= 9.0.0~),
                dbus-test-runner,
                dh-migrations,
@@ -13,7 +13,7 @@ Build-Depends: cmake,
                gsettings-ubuntu-schemas (>= 0.0.1+14.04.20140219),
                intltool (>= 0.35.0),
                libatk1.0-dev,
-               libbamf3-dev (>= 0.5.0+13.10.20130731),
+               libbamf3-dev (>= 0.5.2~bzr0),
                libboost-dev,
                libcairo2-dev,
                libdbus-1-dev,
@@ -200,69 +200,4 @@ Description: Autopiloted tests for Unity
  introspection.  This package contains the specific unity introspection
  bindings to be able to write tests in python as well as the full test suite
  for Unity.
-
-Package: unity-2d
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: libunity-2d-private0
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: libunity-2d-private-dev
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: unity-2d-panel
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: unity-2d-spread
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: unity-2d-common
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: unity-2d-shell
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
-
-Package: unity-2d-dbg
-Priority: extra
-Depends: unity, ${misc:Depends}
-Architecture: all
-Section: oldlibs
-Description: transitional dummy package
- This is a transitional dummy package for unity-2d -> unity migration.
- It can safely be removed.
 
