WindowedLauncherIcon: add new base-class for Icons holding windows
And using this as base-class for ApplicationLauncherIcon

--- a/launcher/CMakeLists.txt
+++ b/launcher/CMakeLists.txt
@@ -61,6 +61,7 @@ set (LAUNCHER_SOURCES
      VolumeImp.cpp
      VolumeLauncherIcon.cpp
      VolumeMonitorWrapper.cpp
+     WindowedLauncherIcon.cpp
      XdndCollectionWindowImp.cpp
      XdndManagerImp.cpp
      XdndStartStopNotifier.cpp
