debian/control: add nautilus to Recommends

--- a/debian/control
+++ b/debian/control
@@ -81,6 +81,7 @@ Depends: ${shlibs:Depends},
 Provides: indicator-renderer
 Recommends: unity-control-center,
             ${unity-default-masterscopes}
+            nautilus,
             indicator-appmenu (>= 15.02.0),
             indicator-application,
             indicator-sound,
