--- a/debian/control
+++ b/debian/control
@@ -139,6 +139,8 @@ Description: Interface designed for efficiency of space and interaction.
 Package: libunity-core-6.0-9
 Section: libs
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          unity-services (= ${binary:Version}),
@@ -159,6 +161,7 @@ Description: core library for the Unity interface
 Package: libunity-core-6.0-dev
 Section: libdevel
 Architecture: any
+Multi-Arch: same
 Depends: ${misc:Depends},
          libunity-core-6.0-9 (= ${binary:Version}),
          libglib2.0-dev,
