ThemeSettings: add small class for reading gtk settings for theming

--- a/unity-shared/CMakeLists.txt
+++ b/unity-shared/CMakeLists.txt
@@ -61,6 +61,7 @@ set (UNITY_SHARED_SOURCES
      TextureCache.cpp
      TextInput.cpp
      TextureThumbnailProvider.cpp
+     ThemeSettings.cpp
      ThumbnailGenerator.cpp
      Timer.cpp
      UBusServer.cpp
