--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Build-Depends: cmake,
                gsettings-desktop-schemas-dev,
                gsettings-ubuntu-schemas (>= 0.0.1+14.04.20140219),
                intltool (>= 0.35.0),
+               libappstream-glib-dev,
                libatk1.0-dev,
                libbamf3-dev (>= 0.5.2~bzr0),
                libboost-dev,
