Properly launch gnome-disk.

--- a/debian/control
+++ b/debian/control
@@ -84,6 +84,7 @@ Provides: indicator-renderer
 Recommends: unity-control-center,
             ${unity-default-masterscopes}
             nautilus,
+            gnome-disk-utility,
             indicator-appmenu (>= 15.02.0),
             indicator-application,
             indicator-sound,
