--- a/lockscreen/CMakeLists.txt
+++ b/lockscreen/CMakeLists.txt
@@ -30,8 +30,8 @@ set (LOCKSCREEN_SOURCES
      LockScreenPromptFactory.cpp
      LockScreenAcceleratorController.cpp
      LockScreenAccelerators.cpp
-     LoginManager.cpp
      ScreenSaverDBusManager.cpp
+     SuspendInhibitorManager.cpp
      UserAuthenticatorPam.cpp
      UserPromptView.cpp
      )
